@@ -13,9 +13,12 @@
     <dropwizard.version>2.0.10</dropwizard.version>
     <jersey.version>2.31</jersey.version>
     <junit.version>5.6.2</junit.version>
-    <mvn-test-plugins.version>3.0.0-M4</mvn-test-plugins.version>
+    <mvn-test-plugins.version>3.0.0-M5</mvn-test-plugins.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <automatic-module.name>bank.service</automatic-module.name>
+    <argLine>--add-opens java.base/java.math=${automatic-module.name}
+             --add-opens java.base/java.time=${automatic-module.name}</argLine>
   </properties>
 
   <dependencies>
@@ -72,8 +75,8 @@
 
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>1.10.19</version>
+      <artifactId>mockito-core</artifactId>
+      <version>3.3.3</version>
       <scope>test</scope>
     </dependency>
 
